Users Name overlapped and cropped in update profile page. solved

--- a/static/sknf/css/style.css
+++ b/static/sknf/css/style.css
@@ -223,3 +223,6 @@ input[name=topic] {
 .profile-username, .text-muted {
     color: #fff;
 }
+.sidebar-menu {
+    white-space: normal;
+}
